past tense intro

--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -92,7 +92,7 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modeled separately are brought together.  In this paper, we present an investigation of the feasibility of extending the scope of Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the vast, emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants readily understood the new interaction mechanisms which were introduced.  Secondly, participants made more carefully justified decisions, even while weighing a greater number of factors, moreover expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up (web page and spreadsheet interface). 
+The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modeled separately are brought together.  In this paper, we present an investigation of the feasibility of extending the scope of Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the vast, emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. Observations from these pre-studies led to our designing \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants readily understood the new interaction mechanisms which were introduced.  Secondly, participants made more carefully justified decisions, even while weighing a greater number of factors, moreover expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up (web page and spreadsheet interface). 
 %The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 % While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor. In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web. We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 
@@ -115,7 +115,7 @@ The information processing capabilities of humans enable them to opportunistical
 \section{Introduction}
 In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  The explosion of structured data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as from new kinds sensors and devices such as wearable activity and bio-sensors. Beyond commercial apps and services, governments have embraced releasing data as a way of providing transparency and accountability to their citizens, causing a huge push to release ``open data'' to the public, at scales ranging from the smallest local councils to entire national departments.  
 
-A common goal for the release of such data has been to provide end-users the ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other data specialists in one-off data analyses, apps and investigations.  Hence, as yet, these data still remain far from making a positive impact upon the activities of ordinary people. A core reason for this, we posit, is a lack of suitable tools for accessing and interrogating these heterogeneous data sources, as well as a means by which these disparate information sources can be effectively brought together and cross-referenced.  For example, most personal information management (PIM) tools only provide the capacity to manage small, pre-fixed sets of data types (such as calendar appointments, address book entires,  tools and to-do list items).  Alternatively, they may provide little or no support for structured data, as exhibited in word processors, text editors, and sketching/drawing tools \cite{infoscraps}.   
+A common goal for the release of such data has been to provide end-users with the ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other data specialists in one-off data analyses, apps and investigations.  Hence, as yet, these data still remain far from making a positive impact upon the activities of ordinary people. A core reason for this, we posit, is a lack of suitable tools for accessing and interrogating these heterogeneous data sources, as well as a means by which these disparate information sources can be effectively brought together and cross-referenced.  For example, most personal information management (PIM) tools only provide the capacity to manage small, pre-fixed sets of data types (such as calendar appointments, address book entires,  tools and to-do list items).  Alternatively, they may provide little or no support for structured data, as exhibited in word processors, text editors, and sketching/drawing tools \cite{infoscraps}.   
 
 % We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. 
 In this paper, we present an investigation of ways that PIM tools might be extended to allow data to be brought together in an ad-hoc fashion from arbitrary structured data sources, so that end-users can effectively harness knowledge emerging from the vast ecosystems of data.  For this purpose, we employed an exploratory, mixed-method approach with three sequential stages. First, in a pre-study, we conducted a series of semi-structured interviews in order to understand the various types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people typically drew upon multiple, diverse sources, for a number of reasons, including increasing the breadth of information, assessing the reliability of information, and gaining multiple perspectives.  
@@ -127,17 +127,17 @@ Second, we carried out a structural analysis of data records from personal data 
 Third, we developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  This interface was principally designed to support people's data integration needs for data heterogeneity, using observations made during the pre-studies. In particular, DataPalette was designed to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then conducted a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we had devised, and that it effectively improved people's ability to perform multifaceted decision-making tasks using multiple sources.
 
 \section{Background}
-In this section, we motivate our work using three fields: PIM, data integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, which foregrounded work to consolidate data from multiple sources and which still remains a challenge.  Specifically, reconciling the differences that arise among representations when data is created by different people, at different times, for different purposes. As described by Alon Halevy:
+Our work was initiated by examining three fields of inquiry, comprising PIM, database integration, and end-user mashups and toolkits.  Our primary motivation stemmed from field studies in PIM, where the need for consolidating data was observed.  This was an area in which many challenges remained, however, specifically, in reconciling the differences that arose among representations when data was created by different people, at different times, and for different purposes. As described by Alon Halevy:
 
 \begin{quote} 
 The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
 \end{quote}
 
-The user experience benefits of conquering such data integration challenges have been demonstrated in PIM prototype systems with integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and SIS \cite{Dumais:2003:SIS:860435.860451}, showed the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about the people, places and things mentioned throughout his or her files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated the benefit of viewing and re-using information easily in multiple task contexts without fragmentation or loss of consistency when a single, consolidated data model was used across applications. 
+The benefits to the end-user in conquering data integration were demonstrated in PIM prototype systems that employed integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and SIS \cite{Dumais:2003:SIS:860435.860451}, showed the speed, efficiency and re-findability gained when a user was able to quickly trace and cross-reference information about people, places and things mentioned throughout files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated that, when a single, consolidated data model was used across applications, the results included increased efficiency, the elimination of information fragmentation, and reduced effort, with the user being able to view and re-use information easily in multiple task contexts. 
 
-Therefore, despite the multifaceted challenges of data integration, various fields have sought methods to resolve them. The database integration and Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373} fields, for example, have pursued automatic, recently machine-learning approaches to data integration, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching}.   In contrast, the end-user programming community has pursued user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming languages such as Yahoo Pipes \cite{citeulike:8887891}.
+Because of the multifaceted challenges of data integration, contrasting approaches were investigated in different research communities. In the fields of database integration and the Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373}, for example, automatic, machine-learning approaches, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching} were pursued.   In contrast, the end-user programming community preferred user-driven approaches, in which the user orchestrated the process of reconciliation at various levels of specificity.  Systems that used this approach included ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming language environments such as Yahoo Pipes \cite{citeulike:8887891}.
 
-Our approach is most similar to systems that, like the end-user programming approaches, allow users to easily perform data reconciliation using concrete instances as examples, but that avoid the need for any sort of ``programming'' by the user.  Prior systems in this space include ``Cards, Relations and Templates''\cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} which both allow users to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  Our system, \emph{DataPalette} extends this approach to a data workbench environment which allows users to easily consolidate and compare instances by their properties.
+With DataPalette, our approach bore similarities with the end-user programming approach in that the user could easily perform data reconciliation using concrete instances as examples, but also avoided the need for any sort of programming by the user.  Previous systems utilising this approach included ``Cards, Relations and Templates'' \cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} both of which permitted the user to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  \emph{DataPalette} extended this approach to a data workbench environment which allowed people to easily consolidate and compare instances by their properties.
 
 % algorithms that train on a corpus of alignments and produce new alignments on unseen data schemas or instances, respectively
 
