--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -118,26 +118,26 @@ In recent years, an unprecedented quantity and variety of information has been m
 A common goal for the release of such data has been to provide end-users with the ability to make more informed decisions pertaining to their health, wealth, and well-being \cite{Shadbolt:2006:SWR:1155313.1155373}.  Thus far, however, this data has been predominately used by app developers, journalists and other data specialists in one-off data analyses, apps and investigations.  Hence, as yet, these data still remain far from making a positive impact upon the activities of ordinary people. A core reason for this, we posit, is a lack of suitable tools for accessing and interrogating these heterogeneous data sources, as well as a means by which these disparate information sources can be effectively brought together and cross-referenced.  For example, most personal information management (PIM) tools only provide the capacity to manage small, pre-fixed sets of data types (such as calendar appointments, address book entires,  tools and to-do list items).  Alternatively, they may provide little or no support for structured data, as exhibited in word processors, text editors, and sketching/drawing tools \cite{infoscraps}.   
 
 % We hypothesise that end-users will benefit from tools that allow them to effectively browse, use and consume heterogeneous structured data from diverse sources. 
-In this paper, we present an investigation of ways that PIM tools might be extended to allow data to be brought together in an ad-hoc fashion from arbitrary structured data sources, so that end-users can effectively harness knowledge emerging from the vast ecosystems of data.  For this purpose, we employed an exploratory, mixed-method approach with three sequential stages. First, in a pre-study, we conducted a series of semi-structured interviews in order to understand the various types of tasks people performed using multiple information sources, and the processes that they relied upon to perform such tasks.  Our results suggested that people typically drew upon multiple, diverse sources, for a number of reasons, including increasing the breadth of information, assessing the reliability of information, and gaining multiple perspectives.  
+In this paper, we present an investigation of ways that PIM tools might be extended to allow data to be brought together in an ad-hoc fashion from arbitrary structured data sources, so that end-users can effectively harness knowledge emerging from the vast ecosystems of data.  For this purpose, we have employed an exploratory, mixed-method approach with three sequential stages. First, in a pre-study, we have conducted a series of semi-structured interviews in order to understand the various types of tasks people perform using multiple information sources, and the processes that they rely upon to perform such tasks.  Our results suggest that people typically draw upon multiple, diverse sources for a number of reasons, including increasing the breadth of information, assessing the reliability of information, and gaining multiple perspectives.  
 
 % Second, we conducted a quantitative, structural analysis of various popular personal data sources available today to identify potential barriers to effective unification of data.  Drawing upon definitions from the database integration and automatic schema matching literature, we characterised the types of heterogeneity exhibited across data sources in six domains: address books (contact info), event calendars (events), music (songs/tracks), shopping (product info) social networking (profiles) and weather (forecasts), finding that terminological heterogeneity dominates the simpler data feeds (including social networking and restaurant recommendations), while structural issues pervade the more complex schemas of online retailers' product catalogues.
 
-Second, we carried out a structural analysis of data records from personal data sources to identify the most common kinds of problems likely to arise from integrating data from these multiple sources.  For this, we examined data sources from six common domains: contacts, events, music, shopping, social networking and weather. We discovered in our analysis that while terminological heterogeneity was the most common issue for unifying simpler data records (such as address book contacts and social network profiles), structural differences were exhibited among more complex schemas, such as online retailers' product catalogues.
+Second, we have carried out a structural analysis of data records from personal data sources to identify the most common kinds of problems likely to arise from integrating data from these multiple sources.  For this, we have examined data sources from six common domains: contacts, events, music, shopping, social networking and weather. We have discovered, in our analysis, that while terminological heterogeneity is the most common issue for unifying simpler data records (such as address book contacts and social network profiles), structural differences are exhibited among more complex schemas, such as online retailers' product catalogues.
 
-Third, we developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  This interface was principally designed to support people's data integration needs for data heterogeneity, using observations made during the pre-studies. In particular, DataPalette was designed to facilitate simple, ``light-touch'' integration tasks of diverse, heterogeneous data sources.  We then conducted a usability evaluation of DataPalette, which revealed that most users were comfortable with the interactive integration mechanisms we had devised, and that it effectively improved people's ability to perform multifaceted decision-making tasks using multiple sources.
+Third, we have developed DataPalette, an interface that enables serendipitous ``data mixing,'' eliminating the need for people to write bespoke code to effectively combine and compare heterogeneous data.  DataPalette facilitates basic integration of diverse, heterogeneous data sources using simple interface gestures.  A usability evaluation of DataPalette has revealed that most users are comfortable with its interactive integration mechanisms, and that it effectively improves people's ability to perform multifaceted decision-making tasks using multiple sources.
 
 \section{Background}
-Our work was initiated by examining three fields of inquiry, comprising PIM, database integration, and end-user mashups and toolkits.  Our primary motivation stemmed from field studies in PIM, where the need for consolidating data was observed.  This was an area in which many challenges remained, however, specifically, in reconciling the differences that arose among representations when data was created by different people, at different times, and for different purposes. As described by Alon Halevy:
+Our work has been informed by three fields of inquiry, comprising PIM, database integration, and end-user mashups and toolkits.  Our primary motivation stems from field studies in PIM, where the need for consolidating data has been observed. This is an area in which many challenges remain, however, specifically, in reconciling the differences that arise among representations when data is created by different people, at different times, and for different purposes. As described by Alon Halevy:
 
 \begin{quote} 
 The problem stems from [the fact that] we are trying to integrate data systems that were developed for slightly (or vastly) different business needs. Hence, even if they model overlapping domains, they will model them in different ways. Differing structures are a byproduct of human nature --- people think differently from one another even when faced with the same modelling goal~\cite{halevy2006data}.\looseness=-1
 \end{quote}
 
-The benefits to the end-user in conquering data integration were demonstrated in PIM prototype systems that employed integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and SIS \cite{Dumais:2003:SIS:860435.860451}, showed the speed, efficiency and re-findability gained when a user was able to quickly trace and cross-reference information about people, places and things mentioned throughout files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrated that, when a single, consolidated data model was used across applications, the results included increased efficiency, the elimination of information fragmentation, and reduced effort, with the user being able to view and re-use information easily in multiple task contexts. 
+The benefits to the end-user in conquering data integration have been demonstrated in PIM prototype systems that employ integrative data models.  For example, the uniform query capabilities provided by SEMEX~\cite{semex} and SIS \cite{Dumais:2003:SIS:860435.860451}, show the speed, efficiency and re-findability gained when a user is able to quickly trace and cross-reference information about people, places and things mentioned throughout files, folders, e-mail, and other information repositories.  Similarly, Haystack \cite{haystack} demonstrates that, when a single, consolidated data model is used across applications, the results include increased efficiency, the elimination of information fragmentation, and reduced effort, with the user being able to view and re-use information easily in multiple task contexts. 
 
-Because of the multifaceted challenges of data integration, contrasting approaches were investigated in different research communities. In the fields of database integration and the Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373}, for example, automatic, machine-learning approaches, at either the level of \emph{ontology/schema-level matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching} were pursued.   In contrast, the end-user programming community preferred user-driven approaches, in which the user orchestrated the process of reconciliation at various levels of specificity.  Systems that used this approach included ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming language environments such as Yahoo Pipes \cite{citeulike:8887891}.
+Because of the multifaceted challenges of data integration, contrasting approaches have been investigated in different research communities. In the fields of database integration and the Semantic Web \cite{Shadbolt:2006:SWR:1155313.1155373}, for example, automatic, machine-learning approaches, at either the level of \emph{ontology/schema matching}~\cite{euzenat2004api,doan2003learning}, or \emph{instance matching}~\cite{suchanek2011paris,castano2006matching} have been pursued. In contrast, the end-user programming community has preferred user-driven approaches, in which the user orchestrates the process of reconciliation at various levels of specificity.  Systems that use this approach include ``mash-up makers'' (such as Mashmaker, \cite{intel_mashmaker}, Marmite \cite{Lin:2009:EPM:1502650.1502667}, and Vegemite \cite{Wong:2007:MMM:1240624.1240842}) and visual programming language environments such as Yahoo Pipes \cite{citeulike:8887891}.
 
-With DataPalette, our approach bore similarities with the end-user programming approach in that the user could easily perform data reconciliation using concrete instances as examples, but also avoided the need for any sort of programming by the user.  Previous systems utilising this approach included ``Cards, Relations and Templates'' \cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} both of which permitted the user to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  \emph{DataPalette} extended this approach to a data workbench environment which allowed people to easily consolidate and compare instances by their properties.
+DataPalette's approach exhibits similarities with the user-driven methods just mentioned, in that the user performs data reconciliation using concrete instances as examples, but also avoids the need for any sort of programming.  Previous systems utilising this approach have included ``Cards, Relations and Templates'' \cite{Dontcheva:2007:RCS:1294211.1294224} and Potluck \cite{citeulike:3875264} both of which permit the user to reconcile instances from different schemas into a uniform representation using drag-and-drop gestures to specify relations among fields.  \emph{DataPalette} extends this approach to a data workbench environment which allows people to easily consolidate and compare instances by their properties.
 
 % algorithms that train on a corpus of alignments and produce new alignments on unseen data schemas or instances, respectively
 
