--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -178,18 +178,17 @@ DataPalette's approach exhibits similarities with the user-driven methods just m
 \section{Pre-studies: Identifying Needs and Challenges}
 %% not sure where this goes >> but i want to keep it
 
-We performed an exploratory sequential mixed-method study to help us design our contribution. For our first pre-study, we sought an updated understanding on the use of multiple information sources in information gathering on the Web. There were two driving questions behind this inquiry: first, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of supersites would provide greater benefit than tackling the more challenging problem of integrating data from arbitrary sources on the Web.  Second, why did people choose a single or multiple sources for information gathering?  If a number of websites were used, why was this preferred over a single source?
+In the first of two pre-studies, we aimed to get an updated understanding of the use of multiple information sources in information gathering on the Web. Several basic questions drove our inquiry.  First, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of supersites would provide greater benefit than tackling the more challenging problem of integrating data from an array of arbitrary sources on the Web.  In a related vein, why did some people choose a single source for information gathering, while others selected multiple sources?  What advantages were gained in consulting multiple sources? 
 
 % If they did what kinds of tasks did people required diverse information collection and were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
 
-The second pre-study focused on the characteristics of the data available from the kinds of sites used by the first pre-study's participants for the tasks described. The purpose of this follow-on was not to identify specific characteristics of particular sites in question, but to identify, in general, the degree of complexity of the data feeds currently available across a variety of domains, and typical integration problems that might arise when mixing this data.  In the next two sections, we present our methodologies and results for our pre-studies.
-
+The second pre-study focused on the characteristics of the data available from the selected sites. The purpose of this exercise was not to identify specific characteristics of particular sites, but to establish general characteristics across a variety of domains, so that typical integration problems that might arise when mixing these data could be identified.  In the next two sections, we present our methodologies and the results of our pre-studies.
 
 \subsection{PS.1 - Understanding Data Diversity in Everyday Tasks}
 % Rewritten with paragraph below; feel free to revert, or delete this if you're happy, or whatever.
 % We designed a semi-structured interview about tasks people performed online that required the use of multiple websites, and the processes people used to perform such tasks.  We analysed the data collected from this study using a thematic approach.  In our first pre-study, we investigated the types of tasks people performed online that required heterogeneous data sources, and which tools they would use to organise a social event involving around 15 people.  We planned to interview 8 participants, using a general interview guide approach based on a set of questions.  This approach allowed the interviewer to adapt the interview to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained in the purpose of the study and to minimise bias.
 
-For the first pre-study, we conducted a semi-structured interview to understand the reasons and ways that people drew information from diverse information sources. We interviewed 8 participants, asking them to identify tasks they performed recently that required use of multiple information sources, the kinds of sources used, and the tools used to manage the resulting information.  We then inquired as to how each participant would go about planning various aspects of a large party, such as date, location and entertainment.
+In the first pre-study, we held semi-structured interviews to better understand the reasons that people drew information from single or diverse information sources. We interviewed 8 participants, asking them to identify tasks they had performed recently, which had required the use of multiple information sources.  This was followed by determining the kinds of sources which were used, and the tools that were needed to manage the resulting information.  We then inquired how each participant would go about planning a hypothetical social event entailing details such as scheduling a  date, finding a suitable location and selecting the appropriate entertainment.
 
 \subsubsection{Results - Heterogeneous Data Tasks}
 
