--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -226,22 +226,23 @@ All users experienced using multiple web sites in order to complete a task, and 
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our analysis of structured data feeds started with identifying a set of candidate sources to examine.  We consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb: \url{http://www.programmableweb.com/apis/directory}} list of most popular data feeds for this purpose.  To increase the variety of sources, we selected from 5 categories: social network services, retailers, online event calendars, music sites, and weather, selecting 2--5 sources from each, for a total of 20.  
 
-For each feed, 3--5 ``typical'' records of a single type were obtained; for social networking sites this was user profiles, for retail sites this was product info, etc.
+For each feed, 3--5 typical records of a particular type were obtained from each service's API or feed.  For social networking sites, user profiles were the type of record examined, while for retail sites, event tracking sites, music sites and weather sites, product information, event time/date info, song listing information, and weather forecasts were examined, respectively.
 %Records were located either by first querying for popular key terms using each site's keyword query API (if available), or a ``top products'' query if available.  
-For each such data record, two simple complexity metrics were computed: the \emph{average width} and \emph{average depth}.  Determining the width required first finding the appropriate level for comparison; for example, Amazon's retail product ``Item'' root record had few attributes about the actual product compared to its ``ItemAttributes'' sub-property, which was used instead. The average depth was simply the mean depth to each leaf node from the chosen comparison level.
+For each such data record, two complexity metrics were computed: the \emph{average width}, corresponding to the number of properties, and \emph{average depth}, corresponding to the number of nested structures, of each record.  The third metric measured degree of overlap among sources in each category.  This was done by first mapping \emph{equivalent properties} between schemas, which was done manually by creating alignment tables for all properties of data sources in each category.  Each row comprised a property of a record of one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions.
+
+%Determining the width required first finding the appropriate level for comparison; for example, for Amazon's retail product ``Item'' records, the sub-structure under the ``ItemAttributes'' property was used instead of the root-level record. The average depth was simply the mean depth to each leaf node from the chosen comparison level.
 % This step was done manually, with an effort to select most similar components for comparison.  
 % Depth was computed as the average number of levels from record root to leaves across all properties, and was measured, with width, to convey the overall size/complexity of each record.
 
-The third metric measured degree of overlap among sources in each category.  This was done by first mapping \emph{equivalent properties} between schemas, which was done manually by creating alignment tables for all properties of data sources in each category.  Each row comprised a property of a record of one data source, and all its closest matching properties from the others.  We used both property names and attribute descriptions (in documentation, if available) to make matching decisions.
-
-Once established, equivalent properties were examined firstly for naming inconsistencies.  Then, ignoring property names, we examined whether the property's values were structurally compatible. If both values consisted of the data type and same equivalent subfields, they were considered comparable; otherwise they were considered \emph{structurally inconsistent}.  Finally, we examined equivalent fields which were incomparable for reasons other than structural or terminological differences.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
+Once established, equivalent properties were examined firstly for naming inconsistencies.  Then, ignoring names, we examined whether the property's values were structurally compatible, defined as follows: if both values consisted of the same literal data type or had one or more equivalent subfields, they were considered compatible.  Finally, we examined incompatibilities not covered by naming or structural differences alone.  These \emph{modelling differences} arose from a variety of causes, including, but not limited to: measurement unit inconsistencies, measurement method (e.g., dew point vs relative humidity), differences in scale and granularity, and mismatches in what was being modelled (``offer'' versus ``listing'').\looseness=-1
 
 \subsubsection{Results}
-While most of the data records were small and relatively simple, nearly one in each category provided access to substantially larger and more complex records than the rest. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category separately, revealed overall little overlap among records, except among the smallest records (which had few properties to begin with).  The fact that most of the data records had more unique properties than properties that were redundant with records from other sources, suggests that consolidating such records would effectively, substantially increase the amount of information held by each.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent in other sources' records.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions reveal that data APIs often reflect each provider's own specific needs, and that integrating information across multiple sources may often be necessary to create more complete and useful representations.
+While most of the data records were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap among records, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would effectively substantially increase the amount of information held by each.  While some of these `unique records' were primarily for internal, service-specific use (such as service-specific IDs) others were useful properties that were simply absent in other sources' records.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions reveal that data APIs often reflect each provider's own specific needs, and that integrating information across multiple sources may often be necessary to create more complete and useful representations.
 
-The second finding is that equivalent properties were only rarely given the same name; thus, terminological (or naming) heterogeneity was prevalent across nearly all properties of records observed.  Structural inconsistencies, were slightly rarer, the most common case of which occurred in approximately 1 in 4 records observed, consisted of a simple literal property from one data record expanded out as a sub-structure in the other.  We also encountered two examples where data was nested in textual description fields, which hints of their intended use in feed readers rather than in structured data applications.  Examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
+The second finding is that equivalent properties were only rarely given the same name; thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occuring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts on one site not mapping perfectly to those of another site, and differences in units of measurement.
+% We also encountered two examples of records in which multiple data fields were nested as a single literal, textual ``description'' field.  This behaviour stems from the intended use of such records only by human readers, rather than in structured data applications.  
 
-We also examined the source schemas of data sources for enumerated value types.  There was substantial terminological inconsistency among such value ranges of such types, but also cases where sources had values not represented in the other source's ranges.  For example, ``gender''  on Facebook allowed only ``male'' and ``female'' for values, while Google+ included a third option,``other''.  Few string representations of enumerated value sets matched across data sources perfectly.
+To examine value consistency, we compared source schemas provided in the API and feed documentation of the data providers.  There was substantial terminological inconsistency among the values names for enumerated types, with exact matches occurring less than 10\% of examined value pairs.  There were also range omissions, corresponding to cases where values represented in one record were not represented as valid values for the equivalent property in the target schema.  A simple example of this was the ``gender'' property  on Facebook, which allowed only ``male'' and ``female'' values, while Google+ included a third option,``other''.  
 
 In summary, while data records ranged in complexity, no source subsumed the rest; all contained unique properties.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more than structural or modeling issues.
 
@@ -256,14 +257,16 @@ In summary, while data records ranged in complexity, no source subsumed the rest
 \end{center}
 \end{figure*}
 
-At a high level, the overall goal of DataPalette was to empower end-users to mix arbitrary structured data feeds on-the-fly while solving their particular information task(s) --- be them sense-making or decision-making related --- in order to more effectively accomplish these tasks.  Unlike Mashup makers, including Yahoo Pipes!, the goal was to facilitate such integration without a need for an explicit separate mapping or integration step.  Instead, DataPalette's approach is most directly inspired by ``lightweight'' visual, user-interactive data collection, consolidation and alignment tools such as Potluck \cite{citeulike:3875264} and Cards \cite{Dontcheva:2007:RCS:1294211.1294224}.
+At a high level, the overall goal of DataPalette was to empower end-users to mix arbitrary structured data feeds on-the-fly while solving their particular information task(s) --- be them sense-making or decision-making related --- in order to more effectively accomplish these tasks.  Unlike Mashup makers, including Yahoo Pipes!, the goal was to facilitate such integration without a need for an explicit separate scraping, shaping,, mapping or integration step. 
+
+% Instead, DataPalette's approach is most directly inspired by ``lightweight'' visual, user-interactive data collection, consolidation and alignment tools such as Potluck \cite{citeulike:3875264} and Cards \cite{Dontcheva:2007:RCS:1294211.1294224}.
 
 The two pre-studies provided valuable insight towards this goal that allowed us to guide our design process. PS.1 confirmed the need for data integration by showing that people preferred to rely upon multiple sources of information for making important decisions, and identified the kinds of sources most commonly used.  PS.2, meanwhile, revealed that the most common kinds of heterogeneity across data feeds were of the terminological structural varieties. As these were the ``simpler'' kinds of heterogeneity, this gave us optimism that an interactional approach would be feasible.  In the following sections, we describe the design process we used to create the prototype of DataPalette, followed by a detailed description of the design of the prototype and justification.
 
 \subsection{Design Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with how we'd achieve effective data mixing by end-users. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by colleagues (and in later iterations, non-expert potential users), who critiqued the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
-In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from OS X Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, the basic unit of data was not a file, but an \emph{instance} --- corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data into discrete instances with properties. This was done at time of import, and could be done for every major Web data feed type (JSON, XML, RDF) without any loss of generality.
+In order to feel familiar to new users, we started with the look and feel from OS X Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, the basic unit of data was not a file, but an \emph{instance} --- corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data into discrete instances with properties. This was done at time of import, and could be done for every major Web data feed type (JSON, XML, RDF) without any loss of generality.
 
 \subsubsection{Multi-path selection: link-sliding for heterogeneous sets}
 
