--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -329,7 +329,7 @@ Since it can get confusing having a single instance represented across several g
 
 \section{Evaluation}
 
-In order to determine whether the interaction affordances introduced in DataPalette (henceforth DP) allow users to perform serendipitous data mixing on real data feeds by end-users, we devised a within-subjects A-B trial lab study which we describe next.
+In order to determine whether the interaction affordances introduced in DataPalette (henceforth DP) allow users to perform serendipitous data mixing on real data feeds by end-users, we devised a within-subjects controlled lab study which we describe next.
 
 \subsection{Methodology}
 
@@ -355,7 +355,7 @@ We first describe our methodology, starting with the three hypotheses we set out
 \end{description}
 
 \subsubsection{Study and task design}
-To test these hypotheses, we designed a within-subjects (repeated measures) lab-based A-B study in which participants were asked to perform predefined subjective-choice tasks in two separate timed trials, once with the DP interface (condition A) and once with a baseline interface (condition B).  Each task was paired with one of two datasets, depending on condition, which were counterbalanced in a full-factorial design to eliminate potential ordering, task, and dataset biases.\looseness=-1
+To test these hypotheses, we designed a within-subjects (repeated measures) controlled lab study in which participants were asked to perform predefined subjective-choice tasks in two separate timed trials, once with the DP interface (condition A) and once with a baseline interface (condition B).  Each task was paired with one of two datasets, depending on condition, which were counterbalanced in a full-factorial design to eliminate potential ordering, task, and dataset biases.\looseness=-1
 
 The participants were seated at a standard OS X desktop equipped with a 22-inch monitor with a standard keyboard and mouse. Each participant was given a maximum of 10 minutes to each of two tasks, but were told that if they finished earlier they could tell us and move on to the next condition.  Prior to A conditions, participants were trained on how to use DP using a five-minute instructional video.
 
